# ai-wallpaper

./: Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: ci.yml
assets/: config.yaml.template
src/: config.rs  diffusion.rs  flux.rs  llm.rs  main.rs
