[package]
name = "wallpaper-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
